basic responsive changes made

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container-fluid">
       <h1 class="headcolor" id="featured">Featured Project</h1>
       <div class="row">
-        <div class="image-container col-lg-6 col-sm-12">
+        <div class="image-container col-lg-6 col-xs-12">
           <img class="img-responsive" id="featureimg" src="./resources/images/featured-project.png">
         </div>
       <div class="description col-lg-3 col-sm-6">
@@ -118,8 +118,8 @@
     <div class="trouble">
       <h2><strong>Having trouble thinking of an idea?</strong></h2>
       <p>
-        Inventorsâ€™ block strikes at the worst times.
-        But thatâ€™s all changed with <br>Jumpstartâ€™s Good Idea Generator Lite (GIGLi).
+        Inventors block strikes at the worst times. But thats all changed with Jumpstarts Good<br>
+        Idea Generator Lite (GIGLi).
       </p>
       <span class="btn btn-primary btn-lg">Learn More</span>
     </div>
